// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField functional should call icon press - password type: should match to snapshot - type password Pressed 1`] = `ReactWrapper {}`;

exports[`TextField functional should call icon press - search type: should match to snapshot - type search Pressed 1`] = `ReactWrapper {}`;

exports[`TextField functional should call icon press - text type: should match to snapshot - type text Pressed 1`] = `ReactWrapper {}`;

exports[`TextField functional should call press: should match to snapshot - Pressed 1`] = `ReactWrapper {}`;

exports[`TextField functional should call press: should match to snapshot - Pressed 2`] = `ReactWrapper {}`;

exports[`TextField rendering should match to snapshot - Default TextField: Default TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Disabled TextField snapshot: Disabled TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#BBBBBB",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    mockLabel
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      disabled={true}
      editable={false}
      icon="eye"
      label="mockLabel"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#BBBBBB"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#BBBBBB",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#BBBBBB",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#BBBBBB",
          "flexWrap": "wrap",
          "fontSize": 16,
          "fontWeight": "300",
          "paddingTop": 4,
          "textAlign": undefined,
        }
      }
    >
      mockHelp
    </Text>
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - Error status: Error status TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#E74627",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    mock
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      icon="eye"
      label="mock"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      status="error"
      style={
        Object {
          "borderColor": "#E74627",
          "borderRadius": 4,
          "borderWidth": 2,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Object {
            "color": "#E74627",
            "flexWrap": "wrap",
            "marginRight": 4,
            "paddingTop": 4,
          },
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      accessible={false}
      style={
        Object {
          "color": "#E74627",
          "flexWrap": "wrap",
          "fontSize": 16,
          "fontWeight": "300",
          "paddingTop": 4,
          "textAlign": undefined,
        }
      }
    >
      mock
    </Text>
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - Icon Font Size Default TextField snapshot: Icon Font Size Default TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      icon="eye"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Input padding snapshot: Input padding snapshott 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#777777",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    mock
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      icon="eye"
      label="mock"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 10,
          "paddingRight": 36,
          "width": "100%",
        }
      }
      textInputStyle={
        Object {
          "padding": 10,
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#777777",
          "flexWrap": "wrap",
          "fontSize": 16,
          "fontWeight": "300",
          "paddingTop": 4,
          "textAlign": undefined,
        }
      }
    >
      mock
    </Text>
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - Medium Size TextField snapshot: Medium Size TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      size="medium"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 8,
          "paddingRight": 8,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - No caption on theme snapshot: Not Editable TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#777777",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    mock
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      icon="eye"
      label="mock"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "avatarSizes": Object {
            "large": Object {
              "fontSize": "1rem",
              "size": 48,
            },
            "small": Object {
              "fontSize": ".875rem",
              "size": 32,
            },
            "standard": Object {
              "fontSize": "1rem",
              "size": 40,
            },
            "tiny": Object {
              "fontSize": ".625rem",
              "size": 24,
            },
            "xlarge": Object {
              "fontSize": "1.5rem",
              "size": 80,
            },
          },
          "badgeBorderRadius": 100,
          "buttonSize": Object {
            "large": Object {
              "minHeight": 48,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            },
            "medium": Object {
              "minHeight": 40,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            "small": Object {
              "minHeight": 32,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
            },
          },
          "colors": Object {
            "accent": "#FF6B0B",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#FFFFFF",
            "disabled": "#EEEEEE",
            "error": "#E74627",
            "link": "#227BBD",
            "notification": "#f50057",
            "onBackground": "#333333",
            "onSurface": "#777777",
            "placeholder": "#BBBBBB",
            "primary": "#F4AB34",
            "secondary": "#FF6B0B",
            "success": "#569A32",
            "surface": "#FAFAFA",
            "text": "#333333",
            "textHint": "#BBBBBB",
            "textSecondary": "#777777",
            "warning": "#FCC433",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
          },
          "roundness": 4,
          "spacing": 8,
          "typography": Object {
            "body1": Object {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": 400,
            },
            "body2": Object {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": 400,
            },
            "button": Object {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": 600,
              "textTransform": "uppercase",
            },
            "caption": undefined,
            "h1": Object {
              "fontFamily": "System",
              "fontSize": 96,
              "fontWeight": 300,
            },
            "h2": Object {
              "fontFamily": "System",
              "fontSize": 60,
              "fontWeight": 300,
            },
            "h3": Object {
              "fontFamily": "System",
              "fontSize": 48,
              "fontWeight": 400,
            },
            "h4": Object {
              "fontFamily": "System",
              "fontSize": 34,
              "fontWeight": 400,
            },
            "h5": Object {
              "fontFamily": "System",
              "fontSize": 24,
              "fontWeight": 400,
            },
            "h6": Object {
              "fontFamily": "System",
              "fontSize": 20,
              "fontWeight": 600,
            },
            "overline": Object {
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": 400,
              "textTransform": "uppercase",
            },
            "subtitle1": Object {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": 400,
            },
            "subtitle2": Object {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": 500,
            },
          },
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 18,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#777777",
          "flexWrap": "wrap",
          "fontSize": 16,
          "fontWeight": "300",
          "paddingTop": 4,
          "textAlign": undefined,
        }
      }
    >
      mock
    </Text>
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - Not Editable TextField snapshot: Not Editable TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#777777",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    mock
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      icon="eye"
      label="mock"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#777777",
          "flexWrap": "wrap",
          "fontSize": 16,
          "fontWeight": "300",
          "paddingTop": 4,
          "textAlign": undefined,
        }
      }
    >
      mock
    </Text>
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - Other Type TextField snapshot: Other Type TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      type="other"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Password Type TextField snapshot: Password Type TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={true}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      type="password"
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Placeholder Text Color: Placeholder Text Color TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#FFFFFF"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Required: Required TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#777777",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    Label *
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      label="Label"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      required={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Search Type TextField snapshot: Search Type TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      type="search"
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Selection Color TextField snapshot: Selection Color TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#FFFFFF"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - Sucess status: Sucess status TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#569A32",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    mock
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      icon="eye"
      label="mock"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      status="success"
      style={
        Object {
          "borderColor": "#569A32",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Object {
            "color": "#569A32",
            "flexWrap": "wrap",
            "marginRight": 4,
            "paddingTop": 4,
          },
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      accessible={false}
      style={
        Object {
          "color": "#569A32",
          "flexWrap": "wrap",
          "fontSize": 16,
          "fontWeight": "300",
          "paddingTop": 4,
          "textAlign": undefined,
        }
      }
    >
      mock
    </Text>
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - Theme with missing properties: Theme with missing properties TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#6200ee"
      style={
        Object {
          "borderColor": undefined,
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#000000",
          "flex": 1,
          "fontSize": 16,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "avatarSizes": Object {
            "large": Object {
              "fontSize": "1rem",
              "size": 48,
            },
            "small": Object {
              "fontSize": ".875rem",
              "size": 32,
            },
            "standard": Object {
              "fontSize": "1rem",
              "size": 40,
            },
            "tiny": Object {
              "fontSize": ".625rem",
              "size": 24,
            },
            "xlarge": Object {
              "fontSize": "1.5rem",
              "size": 80,
            },
          },
          "buttonSize": Object {
            "large": Object {
              "minHeight": 48,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            },
            "medium": Object {
              "minHeight": 40,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            "small": Object {
              "minHeight": 32,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
            },
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "overrides": Object {
            "MuiAvatar": Object {
              "colorDefault": Object {
                "color": "#333333",
              },
            },
            "MuiButton": Object {
              "outlinedPrimary": Object {
                "color": "#333333",
              },
              "outlinedSecondary": Object {
                "color": "#333333",
              },
              "root": Object {
                "fontSize": "0.875rem",
                "minHeight": "40px",
                "padding": "8px 16px",
              },
              "sizeLarge": Object {
                "fontSize": "0.875rem",
                "minHeight": "48px",
              },
              "sizeSmall": Object {
                "fontSize": "0.875rem",
                "minHeight": "32px",
              },
            },
          },
          "palette": Object {
            "background": Object {
              "default": "#FFFFFF",
              "defaultContrastText": "#000000",
              "paper": "#FAFAFA",
              "paperConstrastText": "#333333",
            },
            "complementary": Object {
              "link": "#227BBD",
              "warning": "#FCC433",
            },
            "error": Object {
              "contrastText": "#333333",
              "main": "#E74627",
            },
            "primary": Object {
              "contrastText": "#333333",
              "dark": "#EF8426",
              "light": "#FEFDE8",
              "main": "#F4AB34",
            },
            "secondary": Object {
              "contrastText": "#000000",
              "dark": "#FF6B0B",
              "light": "#FFF8E1",
              "main": "#FF6B0B",
            },
            "success": Object {
              "main": "#569A32",
            },
            "text": Object {
              "disabled": "#EEEEEE",
              "hint": "#BBBBBB",
              "primary": "#333333",
              "secondary": "#777777",
            },
            "type": "light",
          },
          "roundness": 4,
          "shape": Object {
            "badgeBorderRadius": 100,
            "borderRadius": 4,
          },
          "spacing": undefined,
          "typography": Object {
            "body1": undefined,
            "body2": undefined,
          },
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - With Provider: With Provider TextField snapshot 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignContent": "flex-start",
          "alignItems": "center",
          "flex": 1,
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexWrap": "wrap",
          "justifyContent": "flex-end",
          "position": "relative",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#777777"
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectionColor="#F4AB34"
        style={
          Object {
            "borderColor": "#BBBBBB",
            "borderRadius": 4,
            "borderWidth": 1,
            "color": "#333333",
            "flex": 1,
            "fontSize": 14,
            "lineHeight": 24,
            "padding": 16,
            "paddingRight": 16,
            "width": "100%",
          }
        }
        theme={
          Object {
            "animation": Object {
              "scale": 1,
            },
            "avatarSizes": Object {
              "large": Object {
                "fontSize": "1rem",
                "size": 48,
              },
              "small": Object {
                "fontSize": ".875rem",
                "size": 32,
              },
              "standard": Object {
                "fontSize": "1rem",
                "size": 40,
              },
              "tiny": Object {
                "fontSize": ".625rem",
                "size": 24,
              },
              "xlarge": Object {
                "fontSize": "1.5rem",
                "size": 80,
              },
            },
            "badgeBorderRadius": 100,
            "buttonSize": Object {
              "large": Object {
                "minHeight": 48,
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
              },
              "medium": Object {
                "minHeight": 40,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              "small": Object {
                "minHeight": 32,
                "paddingBottom": 8,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 8,
              },
            },
            "colors": Object {
              "accent": "#FF6B0B",
              "backdrop": "rgba(0, 0, 0, 0.5)",
              "background": "#FFFFFF",
              "disabled": "#EEEEEE",
              "error": "#E74627",
              "link": "#227BBD",
              "notification": "#f50057",
              "onBackground": "#333333",
              "onSurface": "#777777",
              "placeholder": "#BBBBBB",
              "primary": "#F4AB34",
              "secondary": "#FF6B0B",
              "success": "#569A32",
              "surface": "#FAFAFA",
              "text": "#333333",
              "textHint": "#BBBBBB",
              "textSecondary": "#777777",
              "warning": "#FCC433",
            },
            "dark": false,
            "fonts": Object {
              "light": Object {
                "fontFamily": "System",
                "fontWeight": "300",
              },
              "medium": Object {
                "fontFamily": "System",
                "fontWeight": "500",
              },
              "regular": Object {
                "fontFamily": "System",
                "fontWeight": "400",
              },
              "thin": Object {
                "fontFamily": "System",
                "fontWeight": "300",
              },
            },
            "roundness": 4,
            "spacing": 8,
            "typography": Object {
              "body1": Object {
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": 400,
              },
              "body2": Object {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": 400,
              },
              "button": Object {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": 600,
                "textTransform": "uppercase",
              },
              "caption": Object {
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "h1": Object {
                "fontFamily": "System",
                "fontSize": 96,
                "fontWeight": 300,
              },
              "h2": Object {
                "fontFamily": "System",
                "fontSize": 60,
                "fontWeight": 300,
              },
              "h3": Object {
                "fontFamily": "System",
                "fontSize": 48,
                "fontWeight": 400,
              },
              "h4": Object {
                "fontFamily": "System",
                "fontSize": 34,
                "fontWeight": 400,
              },
              "h5": Object {
                "fontFamily": "System",
                "fontSize": 24,
                "fontWeight": 400,
              },
              "h6": Object {
                "fontFamily": "System",
                "fontSize": 20,
                "fontWeight": 600,
              },
              "overline": Object {
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": 400,
                "textTransform": "uppercase",
              },
              "subtitle1": Object {
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": 400,
              },
              "subtitle2": Object {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": 500,
              },
            },
          }
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    />
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - With help text: With help text TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#777777",
          "flexWrap": "wrap",
          "fontSize": 16,
          "fontWeight": "300",
          "paddingTop": 4,
          "textAlign": undefined,
        }
      }
    >
      Mock Help Text
    </Text>
  </View>
</View>
`;

exports[`TextField rendering should match to snapshot - With icon: With icon TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      icon="eye"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 48,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexBasis": 12,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "padding": 16,
          "position": "absolute",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#333333",
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;

exports[`TextField rendering should match to snapshot - With label: With label TextField snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#777777",
        "flexWrap": "wrap",
        "fontSize": 16,
        "fontWeight": "300",
        "paddingBottom": 4,
        "textAlign": undefined,
      }
    }
  >
    Mock Label
  </Text>
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "alignItems": "center",
        "flex": 1,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
        "position": "relative",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      label="Mock Label"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#777777"
      rejectResponderTermination={true}
      secureTextEntry={false}
      selectionColor="#F4AB34"
      style={
        Object {
          "borderColor": "#BBBBBB",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#333333",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 24,
          "padding": 16,
          "paddingRight": 16,
          "width": "100%",
        }
      }
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  />
</View>
`;
